@@ -53,6 +53,8 @@ void zoom_one_activate(GSimpleAction *action, GVariant *parameter, gpointer user
 void zoom_fit_activate(GSimpleAction *action, GVariant *parameter, gpointer user_data);
 void negative_view_state(GSimpleAction *action, GVariant *state, gpointer user_data);
 void negative_view_activate(GSimpleAction *action, GVariant *parameter, gpointer user_data);
+void photometry_state(GSimpleAction *action, GVariant *state, gpointer user_data);
+void photometry_activate(GSimpleAction *action, GVariant *parameter, gpointer user_data);
 void color_map_state(GSimpleAction *action, GVariant *state, gpointer user_data);
 void color_map_activate(GSimpleAction *action, GVariant *parameter, gpointer user_data);
 void toolbar_activate(GSimpleAction *action, GVariant *parameter, gpointer user_data);
