@@ -30,6 +30,7 @@
 #include "algos/annotate.h"
 #include "io/single_image.h"
 #include "io/sequence.h"
+#include "gui/image_interactions.h"
 #include "gui/callbacks.h"
 #include "gui/utils.h"
 #include "histogram.h"
@@ -617,6 +618,29 @@ static void draw_stars(const draw_data_t* dd) {
 			cairo_stroke(cr);
 			i++;
 		}
+	}
+
+	/* quick photometry ? */
+	if (!com.script && com.qphot && mouse_status == MOUSE_ACTION_PHOTOMETRY) {
+		gboolean inverted = gtk_toggle_tool_button_get_active(GTK_TOGGLE_TOOL_BUTTON(lookup_widget("neg_button")));
+		cairo_set_dash(cr, NULL, 0, 0);
+		if (inverted) {
+			cairo_set_source_rgba(cr, 0.5, 0.0, 0.7, 0.9);
+		} else {
+			cairo_set_source_rgba(cr, 0.5, 1.0, 0.3, 0.9);
+		}
+		cairo_set_line_width(cr, 1.5 / dd->zoom);
+
+		double size = com.qphot->fwhmx * 2.0;
+		cairo_arc(cr, com.qphot->xpos, com.qphot->ypos, size, 0., 2. * M_PI);
+		cairo_stroke(cr);
+		cairo_arc(cr, com.qphot->xpos, com.qphot->ypos, com.pref.phot_set.inner, 0., 2. * M_PI);
+		cairo_stroke(cr);
+		cairo_arc(cr, com.qphot->xpos, com.qphot->ypos, com.pref.phot_set.outer, 0., 2. * M_PI);
+		cairo_stroke(cr);
+		cairo_select_font_face(cr, "Purisa", CAIRO_FONT_SLANT_NORMAL, CAIRO_FONT_WEIGHT_BOLD);
+		cairo_set_font_size(cr, 40);
+		cairo_move_to(cr, com.qphot->xpos + com.pref.phot_set.outer + 5, com.qphot->ypos);
 	}
 
 	if (sequence_is_loaded() && com.seq.current >= 0) {
