@@ -54,6 +54,7 @@ static GActionEntry image_entries[] = {
 		{ "statistics", statistics_activate },
 		{ "evaluate-noise", noise_activate },
 		{ "astrometry", astrometry_activate },
+		{ "photometry", photometry_activate, NULL, "false", photometry_state },
 		{ "image-information", image_information_activate },
 		{ "dyn-psf", dyn_psf_activate },
 		{ "annotate-object", annotate_object_activate, NULL, "false", annotate_object_state },
@@ -130,6 +131,7 @@ void siril_window_enable_image_actions(GtkApplicationWindow *window, gboolean en
 		"statistics",
 		"evaluate-noise",
 		"astrometry",
+		"photometry",
 		"image-information",
 	    "dyn-psf",
         "search-object",
