@@ -1,10 +1,12 @@
 v0.99.12 xx xxxx, xxxx
+......
 
 * Fixed memory leak in opencv
 * Fixed FWHM units and star center position in Dynamic PSF
 * Fixed bug in ECC algorithm
 * New candidates star detection algorithm to improve speed and accuracy
 * New SNR estimator in photometry analysis
+* New button for quick photometry
 
 v0.99.10.1 June 23, 2021
 Patch version to fix some issues
