@@ -6,6 +6,7 @@ xx/xx/xx
 * Fixed bug in ECC algorithm
 * New candidates star detection algorithm to improve speed and accuracy
 * New SNR estimator in photometry analysis
+* New button for quick photometry
 
 siril 0.99.10.1
 06/23/21
